--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ nyanza:                 EDFFD9
 
 * {
   margin: 0;
-  display: border-box;
+  box-sizing: border-box;
   scroll-behavior: smooth;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-weight: 600;
@@ -28,51 +28,65 @@ header {
   display: flex;
   align-items: center;
   flex-direction: row;
-  flex-wrap: wrap;
 }
 
-.heading {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
+#logo-box {
+  gap: 10px;
 }
-
-/* header > p {
-  
-  background-color: #edffd9;
-  border: none;
-  padding: 6px;
-  border-radius: 4px;
-} 
-*/
 
 h1 {
   font-size: 50px;
-}
-section {
-  /* border: 1px dotted blue; */
-  /* border-radius: 5px; */
-  height: auto;
-  width: 500px;
-
-  display: flex;
-  justify-content: space-between;
+  padding: 1rem;
+  margin: 1rem;
 }
 
-section > div {
-  height: 300px;
-  width: 200px;
-  size: cover;
+/* ******************************************************* */
+
+nav {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  padding-top: 15px;
 }
 
-.btn {
-  margin: 10px;
-  padding: 3px;
-  height: 100px;
-  width: 100px;
-} /* 
-img {
-  size: cover;
-  height: 200px;
-  width: 200px;
-} */
+/* Styling the images inside the nav */
+nav img {
+  opacity: 0.8s;
+  cursor: pointer;
+}
+
+nav img:hover {
+  opacity: 1;
+}
+
+/* Clear floats after the nav */
+.main-box:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* The expanding image container (positioning is needed to position the close button and the text) */
+.picture-container {
+  position: relative;
+  display: none;
+}
+
+/* Expanding image text */
+#imgText {
+  position: absolute;
+  bottom: 15px;
+  left: 15px;
+  color: white;
+  font-size: 20px;
+}
+
+/* Closable button inside the image */
+.closeBtn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
