--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ nyanza:                 EDFFD9
   font-weight: 600;
 }
 
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 #logo {
   height: 80px;
   width: 80px;
